tests/baselines/reference/typeParameterAsBaseClass.errors.txt
tests/cases/compiler/typeParameterAsBaseClass.ts(1,20): error TS2692: Cannot find name 'T'. A type exists with this name, but no value.
tests/cases/compiler/typeParameterAsBaseClass.ts(2,24): error TS2422: A class may only implement another class or interface.


==== tests/cases/compiler/typeParameterAsBaseClass.ts (2 errors) ====
    class C<T> extends T {}
                       ~
!!! error TS2692: Cannot find name 'T'. A type exists with this name, but no value.
    class C2<T> implements T {}
                           ~
!!! error TS2422: A class may only implement another class or interface.